# Westchester-schools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: answer-key-gate1.yml  answer-key-gate2.yml  ask.yml  bertopic.yml  ci.yml  cluster-drift.yml  cluster-labels.yml  cluster-recompute.yml  cluster-sweep.yml  cluster.yml  crawl-sites.yml  ingest.yml  ocr.yml  probe.yml  quarantine-cluster-refusal.yml  quarantine-probe.yml  recovery-score.yml  recovery-tuning.yml  relabel.yml  revert-cluster-refused.yml  score-quality.yml  scrape-all.yml  scrape.yml
data/targets/: port_chester_peers.json
db/migrations/: 0001_init.sql  0001_schools_init.sql  0003_explore_rpcs.sql  0006_chunk_quality.sql  0008_cluster_active_geometry.sql  0009_cluster_weeks.sql  0010_quarantine_recovery.sql
db/newspaper/: 0001_init.sql  0002_clustering.sql  0004_cluster_labels.sql  0005_cluster_stories.sql  0007_cluster_drift.sql
docs/: ASK.md  CHUNKING.md  CLUSTERING_PLAN.md  DATA_SOURCES.md  ENGINE_EXTRACTION.md  HERALD_NEWSPAPER_STATUS.md  PHASE2_PLAN.md  PLAN.md  ROADMAP.md  SCRAPING.md  STATUS.md  VIZ.md
scripts/: american_stories_gate1.py  american_stories_gate2.py  bertopic_diagnostic.py  bootstrap_fork.sh  cluster_drift.py  cluster_recompute.py  cluster_weeks.py  export_cluster_labels.py  quarantine_by_cluster_refusal.py  quarantine_probe.py  recovery_score.py  recovery_tuning.py  revert_cluster_refused.py  score_chunk_quality.py
src/herald/: __init__.py  __main__.py  ask_schools.py  chunker.py  chunking.py  classify.py  cli.py  cluster.py  cluster_schools.py  db.py  embed.py  eval.py  ingest.py  ingest_schools.py  loc.py  models.py  ocr.py  pdf_text.py  quality.py  retrieval.py  schools_db.py  schools_retrieval.py  settings.py  synth.py  wordlist.txt
src/herald/scrape/: __init__.py  __main__.py  boarddocs.py  core.py  models.py  runner.py  site.py
src/schoolsengine/: __main__.py  classify.py  cli.py  cluster.py  eval.py  ingest.py  models.py  normalize.py  quality.py  rerank.py  retrieval.py  synth.py
tests/: test_ask_schools.py  test_chunker.py  test_chunking.py  test_cluster_schools.py  test_db.py  test_embed.py  test_eval.py  test_ingest.py  test_ingest_schools.py  test_loc.py  test_normalize.py  test_ocr.py  test_rerank.py  test_retrieval.py  test_scrape_boarddocs.py  test_scrape_core.py  test_scrape_runner.py  test_scrape_site.py  test_synth.py
tests/fixtures/: search_two_issues.json
tests/fixtures/boarddocs/: agenda.html  committees.json  meetings.json
viz/: cluster_map.html
web/: .env.local.example  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/ask/: route.ts
web/src/app/api/brief/: route.ts
web/src/app/api/districts/: route.ts
web/src/app/api/search/: route.ts
web/src/app/brief/: page.tsx
web/src/app/explore/: page.tsx
web/src/components/: BurstyTopics.tsx  ChatPane.tsx  ChunkDetail.tsx  CitationLink.tsx  ClusterAnatomy.tsx  ClusterStory.tsx  EvidenceFeed.tsx  ExploreMap.tsx  ExploreSidebar.tsx  FilterControls.tsx  MessageBubble.tsx  PageViewer.tsx  ResearchBrief.tsx  SearchBox.tsx  TimeFilter.tsx  TimelineMinimap.tsx
web/src/lib/: brief.ts  burstiness.ts  dossier.ts  explore-data.ts  rate-limit.ts  retrieval.ts  schools-retrieval.ts  schools-synth.ts  supabase.ts  synth.ts  types.ts  voyage.ts
web/supabase/migrations/: 20260523_phase2_rpcs.sql  20260724_schools_rpcs.sql
(+10 files in other folders)
